Добавил бесконечный цикл и предупреждение пользователя о необходимости ввода кода из браузера

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,6 @@ for_upload_to_yadisk.json
 photos_info.json
 response_info.json
 .ipynb_checkpoints
-for_upload_to_yadisk.json photos_info.json response_info.json
+for_upload_to_yadisk.json
+photos_info.json
+response_info.json
